--- a/main.ipynb
+++ b/main.ipynb
@@ -601,197 +601,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_pass(password):\n",
-    "    ascii_lower = list(range(97, 123))\n",
-    "    ascii_upper = list(range(65, 91))\n",
-    "    ascii_special = list(range(33, 65))\n",
-    "    ascii_special.append(range(91, 97))\n",
-    "    ascii_special.append(123)\n",
-    "    ascii_special.append(range(125, 127))\n",
+    "    lower = upper = digit = special = False\n",
     "\n",
-    "    n = 0\n",
-    "    lower = False\n",
-    "    upper = False\n",
-    "    special = False\n",
-    "    \n",
-    "    for c in password:\n",
-    "        if int(ord(c)) in ascii_lower:\n",
-    "            lower = True\n",
-    "        elif int(ord(c)) in ascii_upper:\n",
-    "            upper = True\n",
-    "        elif int(ord(c)) in ascii_special:\n",
-    "            special = True\n",
-    "        n += 1\n",
+    "    if len(password) < 8:\n",
     "\n",
-    "    if n >= 8 and lower and upper and special:\n",
-    "        return True\n",
-    "    else:\n",
     "        return False\n",
+    "\n",
+    "    for c in password:\n",
+    "\n",
+    "        if c.islower():\n",
+    "\n",
+    "            lower = True\n",
+    "\n",
+    "        elif c.isupper():\n",
+    "\n",
+    "            upper = True\n",
+    "\n",
+    "        elif c.isdigit():\n",
+    "\n",
+    "            digit = True\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            special = True\n",
+    "\n",
+    "    return lower and upper and digit and special\n",
     "          "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "........F........F.F........F.....FF.F..FF.....F....F..F..............F....FF.....F.................\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
+      "....................................................................................................\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, #YpCClceSt, the output should be False\n",
+      "Ran 100 tests in 0.036s\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, v[cbKzvlZgfe%], the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, [Treoy$pR%lOhtng, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, osqSetaeXiTB$y^, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, Vaz3Makc, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, ewvcNn&uid{, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, baunU7QjCj, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, uWjonMc*lHqbao, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, obtP{nhVjVvfqkT*, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, Hjj@GlSM, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, Jgoj0qYpO, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, GblslguZj%, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, smqSeb#wWbav, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, qzMbuvR*N, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, ugjf@IabWRC, the output should be False\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\ownCloud\\Dokumente\\Ironhack\\coding\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
-      "    self.assertEqual(fn(self.input_), self.output, f\"For this password, {self.input_}, the output should be {self.output}\")\n",
-      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AssertionError: True != False : For this password, IaWZ(m][coYnxum, the output should be False\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 100 tests in 0.049s\n",
-      "\n",
-      "FAILED (failures=16)\n"
+      "OK\n"
      ]
     }
    ],
