--- a/main.ipynb
+++ b/main.ipynb
@@ -372,27 +372,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mode_counter(arr):\n",
-    "    lst = unique(arr)\n",
-    "    max_count = -1\n",
-    "    res = 0\n",
     "    counts = {}\n",
-    "    \n",
-    "    for item in lst:\n",
+    "\n",
+    "    for item in arr:\n",
+    "\n",
     "        if item in counts:\n",
+    "\n",
     "            counts[item] += 1\n",
+    "\n",
     "        else:\n",
+    "\n",
     "            counts[item] = 1\n",
-    "    \n",
+    "\n",
+    "    max_count = -1\n",
+    "\n",
+    "    mode = None\n",
+    "\n",
     "    for item, count in counts.items():\n",
+    "\n",
     "        if count > max_count:\n",
+    "\n",
     "            max_count = count\n",
-    "            res = item\n",
-    "    return res"
+    "\n",
+    "            mode = item\n",
+    "\n",
+    "    return mode"
    ]
   },
   {
